--- a/html/00Index.html
+++ b/html/00Index.html
@@ -15,6 +15,7 @@
 </div><h2>Documentation for package &lsquo;graycode&rsquo; version 0.1.0</h2>
 
 <ul><li><a href="../DESCRIPTION" type="text/plain; charset=utf-8">DESCRIPTION file</a>.</li>
+<li><a href="../NEWS.md">Package NEWS</a>.</li>
 </ul>
 
 <h2>Help Pages</h2>
